Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <body>
     <img src="teaser.png" alt="Teaser">
     <audio id="musica" src="Menu_Theme.mp3"></audio>
+    <link rel="icon" type="image/png" href="favicon.ico">
+
 
     <div class="hidden-msg">March 2026</div>
 <script>
